<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_centerVertical="true"
        android:background="@drawable/cornered_border_bg_strong"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_details_layout"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_margin="@dimen/_7sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/bank_acc_deatils_bg">

            <ImageView
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:id="@+id/name_icon"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/user_name_icon"></ImageView>
            <EditText
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_centerVertical="true"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/user_name"
                android:inputType="text"
                android:hint="@string/hint_username"
                android:textSize="@dimen/_11sdp"
                android:layout_toRightOf="@id/name_icon"></EditText>
        </RelativeLayout>
        <RelativeLayout
            android:layout_margin="@dimen/_7sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/bank_acc_deatils_bg">

            <ImageView
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:id="@+id/ifsc_icon"
                android:rotation="180"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ifsc_code_icon"></ImageView>
            <EditText
                android:textSize="@dimen/_11sdp"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_centerVertical="true"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ifsc"
                android:inputType="text"
                android:hint="@string/hint_ifsc"
                android:layout_toLeftOf="@+id/check_ifsc_icon"
                android:layout_toRightOf="@id/ifsc_icon"></EditText>
            <ImageView
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:id="@+id/check_ifsc_icon"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/check_ifsc_icon"></ImageView>

        </RelativeLayout>
        <RelativeLayout
            android:layout_margin="@dimen/_7sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/bank_acc_deatils_bg">

            <ImageView
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:id="@+id/bank_branch_icon"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/bank_icon"></ImageView>
            <EditText
                android:textSize="@dimen/_11sdp"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_centerVertical="true"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bank_branch"
                android:inputType="text"
                android:hint="@string/bank_branch_name"
                android:layout_toRightOf="@id/bank_branch_icon"></EditText>
        </RelativeLayout>
        <RelativeLayout
            android:layout_margin="@dimen/_7sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/bank_acc_deatils_bg">

            <ImageView
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:id="@+id/bank_name_icon"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/bank_icon"></ImageView>
            <EditText
                android:textSize="@dimen/_11sdp"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_centerVertical="true"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bank_name"
                android:inputType="text"
                android:hint="@string/bank_name"
                android:layout_toRightOf="@id/bank_name_icon"></EditText>
        </RelativeLayout>
        <RelativeLayout
            android:layout_margin="@dimen/_7sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/acc_no_layout"
            android:background="@drawable/bank_acc_deatils_bg">

            <ImageView
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:id="@+id/bank_acc_no_icon"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/acc_number_icon"></ImageView>
            <EditText
                android:textSize="@dimen/_11sdp"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_centerVertical="true"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bank_acc_no"
                android:inputType="numberPassword"
                android:hint="@string/hint_bank_acc_no"
                android:layout_toRightOf="@id/bank_acc_no_icon"></EditText>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/confirm_layout"
            android:layout_margin="@dimen/_7sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/bank_acc_deatils_bg">

            <ImageView
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:padding="@dimen/_2sdp"
                android:id="@+id/bank_confirm_acc_icon"
                android:src="@drawable/acc_number_icon"></ImageView>
            <EditText
                android:textSize="@dimen/_11sdp"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_centerVertical="true"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bank_confirm_acc_no"
                android:inputType="numberPassword"
                android:hint="@string/hint_bank_confirm_acc_no"
                android:layout_toRightOf="@id/bank_confirm_acc_icon"></EditText>
        </RelativeLayout>

        <Button
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="@dimen/_200sdp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:id="@+id/add_details_btn"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            android:background="@drawable/submit_button_bg_new"></Button>

    </LinearLayout>

</RelativeLayout>