<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:customfontdemo="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.nic.tnebnewwatersource.activity.ConnectionCheckActivity" />
    </data>


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appBar"
            android:background="?attr/colorPrimary">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorPrimary">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:id="@+id/back_img"
                        android:src="@drawable/back"
                        android:onClick="@{()-> activity.onBackPressed()}"
                        android:padding="0dp"
                        android:layout_centerVertical="true"></ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/title_text"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        android:gravity="center"
                        android:layout_toRightOf="@+id/back_img"
                        android:layout_toLeftOf="@+id/home_icon"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/tnrd_connections"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:textStyle="bold"></TextView>

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:id="@+id/home_icon"
                        android:src="@mipmap/home_img"
                        android:visibility="gone"
                        android:tint="@color/white"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:padding="5dp"></ImageView>
                </RelativeLayout>


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_below="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header_below_rl"
            android:background="@drawable/header_strong_bg_new">
        <RelativeLayout
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/no_connection_count_layout"
            >
            <RelativeLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text"
                android:text="@string/number_of_connections"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"></TextView>
            <TextView
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/connection_count"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:layout_toRightOf="@+id/text"
                android:text="0"
                ></TextView>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_connection_count_layout"
            android:id="@+id/choose_layout">
            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/header_text"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13sdp"
                android:padding="@dimen/_3sdp"
                android:layout_centerHorizontal="true"
                android:text="@string/connection_list"
                android:textStyle="bold"></TextView>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/header_text"
                android:id="@+id/choose_layout_">

                <RadioButton
                    android:padding="@dimen/_4sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/all"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/all"></RadioButton>
                <RadioButton
                    android:layout_toRightOf="@+id/all"
                    android:padding="@dimen/_4sdp"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/taken"
                    android:text="@string/taken"></RadioButton>
                <RadioButton
                    android:padding="@dimen/_4sdp"
                    android:textSize="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/not_taken"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:layout_below="@+id/all"
                    android:text="@string/not_taken"></RadioButton>


            </RelativeLayout>

        </RelativeLayout>
        </RelativeLayout>

        <ScrollView
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@+id/header_below_rl">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/details_layout"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/village_habitation_layout">
                    <TextView
                        android:id="@+id/select_village_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_left_20dp"
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginRight="@dimen/margin_left_20dp"
                        android:text="Select Village"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:visibility="visible"
                        customfontdemo:fontName="@string/font_circular_bold" />

                    <RelativeLayout
                        android:id="@+id/village_layout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/header"
                        android:layout_below="@+id/select_village_tv"
                        android:layout_marginLeft="@dimen/margin_left_20dp"
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginRight="@dimen/margin_left_20dp"
                        android:background="@drawable/new_log_in_details_bg"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="15dp"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/_15sdp"
                            android:visibility="visible"
                            customfontdemo:fontName="@string/font_normal" />

                        <Spinner
                            android:id="@+id/village_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:gravity="center" />

                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/connection_list_layout"
                    android:layout_marginTop="@dimen/_5sdp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:visibility="visible"
                        android:layout_height="wrap_content"
                        android:id="@+id/connection_list_recycler"
                        android:layout_marginTop="@dimen/_5sdp"></androidx.recyclerview.widget.RecyclerView>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:visibility="gone"
                        android:layout_height="wrap_content"
                        android:src="@drawable/no_data_ic"
                        android:id="@+id/not_found_iv"
                        android:padding="@dimen/_40sdp"/>
                </RelativeLayout>

            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>

</layout>